--- a/report/text/LightTabel.tex
+++ b/report/text/LightTabel.tex
@@ -1,6 +1,6 @@
 \chapter{Light Table}
 \label{appen:lights}
-\begin{table}
+\begin{table}[!h]
 	\centering
 		\begin{tabular}{| l | l |}
 			\hline 
