--- a/report/text/overALLImplementation.tex
+++ b/report/text/overALLImplementation.tex
@@ -1,7 +1,7 @@
 \chapter{Overview of the Implementation}
 
-In the previous chapters we looked at the design and implementation of the different system parts there are in the Media-Online Management (MOM).
-In this chapter we are going to show how all of the parts are working together.\\
+In the previous chapters the design and implementation of the different system parts there are in the Media-Online Management (MOM) was discussed.
+This chapter shows how all of the parts are working together.\\
 \\
 In figure \ref{fig:deployment} is a deployment and component diagram of the Media-Online Management system. There is a tag-reader and an Arduino node this is the controller. The controller is working independently of the website but it is dependent on the API. In the future if the Arduino should be replaced or another type of controller also should be used with MOM then it is only the code on the controller which should be adapted. 
 On the centralized server there are five components: the Website, API, Daemon, Function lib, and the Database. All dependencies of among the components is going downwards from a system and user interfaces to the functions lib which manipulate the data in the database which is independent of all the components.
@@ -15,15 +15,15 @@ On the centralized server there are five components: the Website, API, Daemon, F
 \end{figure}
 
 
-Before explaining the testing of MOM, we are going to summarize some of the conclusion that the previous chapters came to.
+Before explaining the testing of MOM, a summary about some of the conclusions that the previous chapters came to is presented.
 
 \subsection*{The Database and the function library}
-The database is able to store all relevant data that is to be used by different system parts. In the database rule's and permission's data is considered to be the same. The tables that are storing a conditions data uses partitioning to avoid redundancy and reduce null values. In the database we use DELETE CASCADE with all foreign keys which mean that when a object is deleted then all of the references to this object is deleted.
+The database is able to store all relevant data that is to be used by different system parts. In the database rule's and permission's data is considered to be the same. The tables that are storing a conditions data uses partitioning to avoid redundancy and reduce null values. In the database DELETE CASCADE is used with all foreign keys which mean that when a object is deleted then all of the references to this object is deleted.
 
 The function library consist of several functions that are able to manipulate the data in the database. The database and many of the functions support that a rule can have several actions and conditions, but some of the functions only support one condition and action.
  
 \subsection*{The API}
-In the API there are three functions turn on, turn off and status. Turn on checks whether a user is allowed to turn on a media, if it is then it calculate the time remaining, update the controller status in the database, and send a turn on message to the controller. Turn off will update the controller status in the database and withdraw the points used. Status checks up on if there have been any changes in time remaining for the user.
+In the API there are three functions \texttt{turn on}, \texttt{turn off} and \texttt{status}. \texttt{turn on} checks whether a user is allowed to turn on a media, if it is then it calculate the time remaining, update the controller status in the database, and send a turn on message to the controller. \texttt{turn off} will update the controller status in the database and withdraw the points used. \texttt{status} checks up on if there have been any changes in time remaining for the user.
 
 \subsection*{The Daemon}
 The daemon is a background process on the server which add points to the profiles when the time period is valid. 
