--- a/report/text/usingRFID.tex
+++ b/report/text/usingRFID.tex
@@ -3,7 +3,7 @@
 The tag reader device explained in the start of Design of the Controller, see \vref{chap:controller}, is in our current implementation an RFID Shield for the Arduino.
 The Arduino board utilizes the SM130 by sending it commands and receiving replies through Digital Pins 7 and 8.
 These pins are initialized using the library \verb|SoftwareSerial.h|\fixme{måske burde vi have noget refferance til dette}.\\
-\begin{lstlisting}
+\begin{lstlisting}[frame=single, language=C, label=pageRFID, caption=The RFID Code Initialization.]
 SoftwareSerial rfid(7, 8); //Sets up the Digital Pins 7 and 8 '
                            //Which the RFID reader Communicates through.
 													
@@ -15,7 +15,7 @@ rfid.begin(19200); //This Method is called in the Setup() phase
 %\fixme{enten skal vi forklare hvad "`baud"' og hvad 19200 bps, N, 8, 1 står for.}		
 
 These messages are a series of bytes sent one at the time in the form of Hexadecimals and in the context of an UART\footnote{UART is a communication interface used by SM130} framed message. \newline
-\begin{tabular}{|l|l|l|}
+\begin{tabular}{|l|l|p{7cm}|}
 \hline \hline
 Header: & 1 Byte & Must always be 0xFF.\\ \hline
 Reserved: & 1 Byte & Must always be 0x00.\\ \hline
@@ -23,7 +23,7 @@ Message Length: & 1 Byte & The amount of bytes used on Command and Data.\\ \hlin
 Command: & 1 Byte & The Hexadecimal value of the command in question.\\ \hline
 Data: & n Bytes & The bytes containing the data needed for the command.\\ \hline
 Checksum: & 1 Byte & The combined value of all above hexadecimals.\\ \hline
-\end{tabular}
+\end{tabular} \\
 The command messages needed we need to allow logging in with a tag are: 
 \begin{itemize}
 	\item Seek: The Module activates `anti-collision' and `Select Tag' so that it can catch a tag when it comes in range.
@@ -47,7 +47,7 @@ The command messages needed we need to allow logging in with a tag are:
 \end{itemize}
 
 As an example \autoref{RBCE} is the code run when sending the Read Block Command to the SM130.
-\begin{lstlisting} [label=RBCE, caption=Example of the Read Block Command from the code point of view.]
+\begin{lstlisting} [frame=single, label=RBCE, language=C, caption=Example of the Read Block Command from the code point of view.]
 void read_block_RFID(void)
 {
   //Read Block Command in UART, sent to the SM130. The Block needs to be Authenticated beforehand.
@@ -66,7 +66,7 @@ On being given a command the SM130 will send a response from which you can tell 
 In the code this information is saved on a char array by the parse method seen in \autoref{arduinoparse}. 
 On `Seek' and `Read Block' we determine the success by reading the slot containing the length of the Message, while on the Authenticate command the Data slot is read to determine success.
 
-\begin{lstlisting} [label=arduinoparse, caption=The method used to read the SM130's response.]
+\begin{lstlisting} [frame=single, label=arduinoparse, language=C, caption=The method used to read the SM130's response.]
 void read_block_RFID(void)
 {
 void parse_response(char PH[], int length)
