--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -44,7 +44,7 @@ The 1st and 2nd feature is best maintained from a website with a graphical inter
 Among other solutions could have been a desktop- or phone application.\\
 \\
 The 3rd feature has a few different solutions. One solution is to write code for a bunch of media, that then would be able to work directly with the administration web-site, but this would force us to write code for every media device from every fabricator.\\
-A better alternative is to create a device that can turn the power on and off for a media instead. Although this solution might influence some media in a bad way, most media today is setup to handle a sudden disappearance of electrical power.\\
+A better alternative is to create a device that can turn the power on and off for a media instead. Although this solution might influence some media in a bad way, but most media today is setup to handle a sudden disappearance of electrical power.\\
 More about the chosen device can be found in chapter \vref{chap:hardware}.\\
 \\
 For the 4th feature there are different ways to identify child users. Mobile phones, fingerprints and NFC tags are only a few potential choices. What is important is that a way for the device from feature no. 3 to uniquely identify each user is needed, such that the rules from the 1st and 2nd feature can be upheld.\\
