--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -30,13 +30,7 @@ RFID, short for Radio-frequency Identification, is a method of using either pass
 \subsubsection{NFC}
 NFC, short for Near Field Communication, is a set of standards for the same technology that RFID uses. The differences between them is that NFC is a strict standard, uses only passive tags and only works over small distances.\citep{rfidAndNfc} NFC is also the technology being embedded in smartphones, which means that the projects system could be made compatible with apps.\\
 \\
-We also considered fingerprints and iris recognition, but dismissed these solutions based on pricing and the fact that the human body changes a lot during the first 20 years of life.\citep{irisid}
-%\subsubsection{Fingerprint}\fixme{kilde}
-%Fingerprint is a method of recognizing whether a persons fingerprint matches another already scanned fingerprint. A number of technologies can be used to scan a persons fingerprint, such as optical and ultrasonic. An algorithm is also needed to compare certain features of the fingerprint in order to be able to compare between fingerprints \citep{irisid}. One of the advantages of fingerprint is that the only equipment needed is the scanner and something to compare them, this means that the cost could be kept down. Fingerprints also have some disadvantages. One of the disadvantages is gathering the fingerprints of all family members where as other methods can be established by on person will fingerprints require all members are involved in the setup process. Another disadvantage is that it has been shown that children fingerprint change over time as they grow up, which could mean that the fingerprint has to be scanned again after a while. Fingerprints is also characterized as personal information and therefore need extra security measures. 
-
-%\subsubsection{Iris Recognition}
-%Iris Recognition is a method of scanning and comparing the iris of two eyes. The technology is somewhat new and have many good qualities. Our iris is one of the most unique traits as human and therefore is finding one the same iris as you is very on likely. The uniqueness of iris is also very characteristic and therefore easy to distinguish if two irises are a match and is therefore gives at more secure analysts\citep{irisid}. As a new technology an iris scanner is not cheap and is not simple to implement in household system with the need for many scanners.    
-   %Although the technology is somewhat new, it is already in use many places. Strengths of iris recognition is that it is fast, with comparisons being in the millions for single-core CPUs. Advantages of iris recognition is speed and accuracy. One disadvantage of iris recognition is that a high quality camera has to be used in order for the camera to pick up on small details. Iris scanners can like fingerprints be fooled using a high quality image printed on paper. Another disadvantage is that it has been shown that surgical procedures can change iris' so that the scanner can not recognize that person.
+Fingerprints and iris recognition was also considered, but dismissed these solutions based on pricing and the fact that the human body changes a lot during the first 20 years of life.\citep{irisid}
 
 \subsection{Conclusion - Identification}
 In conclusion the identification chosen is RFID, because it could be provided by the university, however, originally NFC was preferred. 
@@ -46,7 +40,7 @@ The RFID has been chosen because it is easily accessible, and all of the practic
 In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup is needed.\\
 Such server work can be done from a private home or centralized global server, maintained by the manufacturer of the system.\\
 
-We here list the pros and cons of having a decentralized server setup versus centralized server setup.\fixme{kilde}\\
+Listed here is the pros and cons of having a decentralized server setup versus centralized server setup.\fixme{kilde}\\
 
 \textbf{Decentralized Server Setup}\\
 Pros:
