--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -40,7 +40,7 @@ The RFID has been chosen because it is easily accessible, and all of the practic
 In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup is needed.\\
 Such server work can be done from a private home or centralized global server, maintained by the manufacturer of the system.\\
 
-Listed here is the pros and cons of having a decentralized server setup versus centralized server setup.\fixme{kilde}\\
+Listed here is the pros and cons of having a decentralized server setup versus centralized server setup.\\
 
 \textbf{Decentralized Server Setup}\\
 Pros:
