--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -4,7 +4,7 @@
 In the Media-Online Management there are a few concepts that will be used through out the report. These are chore, permission and rules. The meaning of each will be explain in the following sections.
 
 \section{Chore}
-A chore in MOM is a representation of a house chore that is to be done regularly. We have included chore into this system to encourage children to help with the house chores which gives more time for media as a reward. Therefore each chore needs a number of points which will be given when the child has done the chore. 
+A chore in MOM is a representation of a house chore that is to be done regularly. Included in the system is chores to encourage children to help with the house chores which gives more time for media as a reward. Therefore each chore needs a number of points which will be given when the child has done the chore. 
 An example on a house chore could be to take out the garbage, then the chore in MOM would have a name: ``take out garbage'', possible a bigger description of the chore: ``remember to sort the garbage into the correct trash cans'' and when the chore is done a number of points are given: ``10''.  
 
 One disadvantage about the chore design is that the parent needs to use the website to award the child with points for doing a chore. It would have been better to automate it further, but to limit the scope of the project this would be future work.  
@@ -25,7 +25,7 @@ In the system a rule can be many things. The following are just a few examples o
 
 The rule is included because it gives the parents a more powerful method to control their children's use of medias. 
 But there is one disadvantage with rules, it might be complicated for the user to understand how to use them. 
-This means we must take care to design the concept of rules, so that it is easy to use and understand their effects.
+This means that when designing the concept of rules, care must be taken to ensure that it is easy to use and understand their effects.
 
 A rule should be connected to one or more user profiles since the rules otherwise would be unnecessary. A rule consist of a name, a set of actions and  a restricted set of conditions depending on the actions. A condition is used to decide when a rule is relevant which is when all conditions fits. An action is something that can or should be done if all of the rule's conditions hold.
 To see a quick overview of the different conditions and their name:
@@ -50,14 +50,13 @@ An overview of the actions and their name is listed below:
 	\item[Access controller] it will give the profile access to a specific media. 
 	\item[Cannot access controller] it will block the user from using a specific media. 
 \end{description}
-\fixme{Bette describtion of differens between Block user and Cannot access any controller}
-Two designs have been made over rule. The first design is explained in the appendix \vref{appendixFirstRuleDesign}. The final design is of the rule is explained later in this section. The main difference is that in the first design is an extra type of condition timestamp. But late into the implementation of MOM we found that it would not be needed and therefor reworked the design, into what follows.\\
+Two designs have been made over rule. The first design is explained in the appendix \vref{appendixFirstRuleDesign}. The final design is of the rule is explained later in this section. The main difference is that in the first design is an extra type of condition time-stamp. But late into the implementation of MOM is was found that it would not be needed and therefore reworked the design, into what follows.\\
 \\
 The rule's structure is presented in a grammar in listing	\ref{grammar2} expressed in Extended Backus-Naur Form(EBNF) \citep{CoPL}.
-A nonterminal is en-captured in $<>$ and a terminal is just a word or en-captured in ``''. 
+A non-terminal is en-captured in $<>$ and a terminal is just a word or en-captured in ``''. 
 Also the grouping is used represented in $()$, the replica symbol is $*$, comments is $(**)$ and alternative is $|$. 
 
-A rule consist of a name and one of five action and condition sets which determine which actions and conditions can be combined. A rule can have several actions and conditions but only from the same set, see line 1-7. The action set is presented from 9-23 where all has a specific name, some have a specific Controller represented as a number and some has points which is a number. The condition set likewise represented from 9-23 and the condition types are presented from 25-30. There are three types but they each have a specific name. One type has a Controller, another only the name ``True'' and the last has a timeperiod. The timeperiod has two timestamps and if it is repeatable it has a string representation of the weekdays and a representation of how it is repeatable. 
+A rule consist of a name and one of five action and condition sets which determine which actions and conditions can be combined. A rule can have several actions and conditions but only from the same set, see line 1-7. The action set is presented from 9-23 where all has a specific name, some have a specific Controller represented as a number and some has points which is a number. The condition set likewise represented from 9-23 and the condition types are presented from 25-30. There are three types but they each have a specific name. One type has a Controller, another only the name ``True'' and the last has a time-period. The time-period has two timestamps and if it is repeatable it has a string representation of the weekdays and a representation of how it is repeatable. 
 
 \begin{lstlisting}[label=grammar2, caption=Grammar of a rule in EBNF]
 <Rule>:= <name> (
@@ -102,7 +101,7 @@ In this section some examples of rules for a profile will be given.
 
 The first example could be that the profile Peter gets point for each football training and the football training is Monday and Thursday from 18:00 to 19:30 each week. Then the action could be to add 25 points to Peter when condition holds. The condition is from 19:30 to 19:30 where the day is ``Monday, Thursday'' and it is repeated weekly. \\
 
-The second example could be that Susan is grounded from the 2nd December to the 6th December both at 6 p.m.. In the system there will be a condition with a Timeperiod which is 2nd December 2013 18:00 to 6th December 18:00.
+The second example could be that Susan is grounded from the 2nd December to the 6th December both at 6 p.m.. In the system there will be a condition with a Time-period which is 2nd December 2013 18:00 to 6th December 18:00.
 and an action that is ``Block user'' such that she cannot use any media or gain points in this period. \\
 
 If the parents should make a rule which give themselves unlimited time and access to any media. The condition would be True and the actions would be ``Unlimited time'' and ``Access any controller''.\\
@@ -120,7 +119,7 @@ This means that permissions is only an abstraction making an easier understandin
 \section{Permission and Rules Precedence}
 \label{sec:permissionAndRulesPrecedence}
 It should be possible to override permissions and rules with another rule, but then some priority rules  need to be established. 
-For the overriding of the two to be relevant they need to overlap in time which mean that the condition should use Timeperiod or True. Also if it is a rule then it should have an action with the name ``Cannot access controller'', ``Access controller'', ``Cannot access any controller'' or ``Access any controller'' to be relevant. So from the grammar \ref{grammar2} it is the rule sets $<name> <ActionsetSet4><ConditionSet4>$  and $<name> <ActionsetSet5><ConditionSet5>$ that need the priority.
+For the overriding of the two to be relevant they need to overlap in time which mean that the condition should use Time-period or True. Also if it is a rule then it should have an action with the name ``Cannot access controller'', ``Access controller'', ``Cannot access any controller'' or ``Access any controller'' to be relevant. So from the grammar \ref{grammar2} it is the rule sets $<name> <ActionsetSet4><ConditionSet4>$  and $<name> <ActionsetSet5><ConditionSet5>$ that need the priority.
 
 It was decided that rules should always have precedence over permissions. But if the conflict is among two rules it is a more complex set of precedence rules. First to determine the precedence we look at the action's name. See figure \ref{fig:precendence} where the precedence graph is shown. Notice that the precedence for ``Cannot access controller'' and ``Access controller'' can be either way depending on the condition. Otherwise both of them has priority over ``Access any controller'' which also has priority over ``Cannot access any controller''. 
   
@@ -134,13 +133,13 @@ It was decided that rules should always have precedence over permissions. But if
 When the condition determines the precedence we have different combinations:
 
 \begin{itemize}
-	\item If one is True and the other is Timeperiod then the rule with the Timeperiod has the higher precedence
+	\item If one is True and the other is Time-period then the rule with the Time-period has the higher precedence
 	\item If both is True then Access controller has the precedence.
-	\item If both is Timeperiod:
+	\item If both is Time-period:
 		\begin{itemize}
 			\item If both is repeatable or non-repeatable%\fixme{First time we talk about non-repeatable} - not really look in grammar and text above, just saying if it is repeateble 
 			then Access controller has the precedence
-			\item If one is repeatable and the other is nonrepeatable then the rule with the nonrepeatable Timeperiod has the higher precedence.
+			\item If one is repeatable and the other is non-repeatable then the rule with the non-repeatable Time-period has the higher precedence.
 		\end{itemize}
 \end{itemize}
 
